Add brand FAQ controls
